--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "mongoose": "^6.7.2",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.20"
+  },
+  "devDependencies": {
+    "cowsay": "^1.5.0"
   }
 }
